--- a/M2U2/ejercicio02.css
+++ b/M2U2/ejercicio02.css
@@ -2,10 +2,9 @@
     background-color: white;
     border: 3px solid black;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
     width: 600px;
     height: 600px;
+    align-items: center;
 }
 
 .item1 {
