--- a/M2U2/ejercicio02.css
+++ b/M2U2/ejercicio02.css
@@ -12,6 +12,9 @@
     width: 200px;
     height: 200px;
     font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .item2 {
@@ -19,6 +22,9 @@
     width: 200px;
     height: 200px;
     font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .item3 {
@@ -26,4 +32,7 @@
     width: 200px;
     height: 200px;
     font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
